// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button disabled button as link renders disabled version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <a
      aria-disabled="true"
      class="font-inherit focus:outline-none text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [[data-component-type="button"]+&]:ml cursor-default pointer-events no-underline hover:no-underline rounded-sm shadow-none border-none text-white visited:text-white bg-gray min-w h-8 py-0 px-4"
      data-component-type="button"
      role="button"
      tabindex="-1"
      type="button"
    >
      <span
        class="items-center inline-flex font-semibold whitespace-nowrap text-button"
      >
        Click me!
      </span>
    </a>
  </div>
</div>
`;

exports[`Button disabled button renders disabled version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      aria-disabled="true"
      class="text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [[data-component-type="button"]+&]:ml cursor-default pointer-events no-underline hover:no-underline rounded-sm shadow-none border-none text-white visited:text-white bg-gray min-w h-8 py-0 px-4"
      data-component-type="button"
      disabled=""
      role="button"
      tabindex="-1"
      type="button"
    >
      <span
        class="items-center inline-flex font-semibold whitespace-nowrap text-button"
      >
        Click me!
      </span>
    </button>
  </div>
</div>
`;
